--- a/recipes/pho.html
+++ b/recipes/pho.html
@@ -7,7 +7,7 @@
     <title>Chicken Pho</title>
 </head>
 <body>
-    <img href="https://www.simplyrecipes.com/thmb/BRXbVPJcNN-zXGrezNTsJ0IYfYw=/1328x1328/smart/filters:no_upscale()/__opt__aboutcom__coeus__resources__content_migration__simply_recipes__uploads__2017__02__2017-02-07-ChickenPho-13-87ae826d1cb347c1a68d133edc7d9a1b.jpg" alt="Bowl of Chicken Pho">
+    <img href="../img/pho.jpeg" alt="Bowl of Chicken Pho">
     <h2>Quick Chicken Pho</h2>
     <p>Quick weeknight chicken pho from expert Andrea Nguyen! Shortcut version of traditional Vietnamese noodle soup. 30-minutes.</p>
     <ol>
