--- a/recipes/smoothie.html
+++ b/recipes/smoothie.html
@@ -7,7 +7,7 @@
     <title>Smoothie</title>
 </head>
 <body>
-    <img href="https://www.allrecipes.com/thmb/nXTnAdimMBtkQieZhloU45cM1V0=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/441727-fruit-and-yogurt-smoothie-Alberta-Rose-4x3-1-aa04390dac11483aaeeec142dff1f6c7.jpg" alt="Smoothie">
+    <img href="../img/smoothie.jpeg" alt="Smoothie">
     <h2>Smoothie Recipe</h2>
     <p>This is my own smoothie recipe.</p>
     <ol>
