attempt to fix imgs

--- a/recipes/brekkyburrito.html
+++ b/recipes/brekkyburrito.html
@@ -7,7 +7,7 @@
     <title>Breakfast Turkey-Sausage-Breakfast-Burritos-5b</title>
 </head>
 <body>
-    <img href="../img/burrito.jpeg" alt="Breakfast Burrito">
+    <img href="/img/burrito.jpeg" alt="Breakfast Burrito">
     <h2>Breakfast Burrito Recipe</h2>
     <p>My own personal favorite breakfast burrito recipe (or one of them) off the top of my head.</p>
     <ol>
