--- a/recipes/pho.html
+++ b/recipes/pho.html
@@ -7,7 +7,7 @@
     <title>Chicken Pho</title>
 </head>
 <body>
-    <img href="../img/pho.jpeg" alt="Bowl of Chicken Pho">
+    <img src="../img/pho.jpeg" alt="Bowl of Chicken Pho">
     <h2>Quick Chicken Pho</h2>
     <p>Quick weeknight chicken pho from expert Andrea Nguyen! Shortcut version of traditional Vietnamese noodle soup. 30-minutes.</p>
     <ol>
