--- a/recipes/smoothie.html
+++ b/recipes/smoothie.html
@@ -7,7 +7,7 @@
     <title>Smoothie</title>
 </head>
 <body>
-    <img href="../img/smoothie.jpeg" alt="Smoothie">
+    <img src="../img/smoothie.jpeg" alt="Smoothie">
     <h2>Smoothie Recipe</h2>
     <p>This is my own smoothie recipe.</p>
     <ol>
